[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Planet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Orbit-1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Breathing.gd" type="Script" id=3]
[ext_resource path="res://Fonts/roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Satellite.png" type="Texture" id=6]
[ext_resource path="res://Fonts/fontp.tres" type="DynamicFont" id=8]
[ext_resource path="res://Soudns/inner-orbit.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Breathing" type="Node2D"]
script = ExtResource( 3 )

[node name="System" type="Node2D" parent="."]
position = Vector2( 205.34, 395.992 )
scale = Vector2( 0.05, 0.05 )

[node name="Planet" type="Sprite" parent="System"]
texture = ExtResource( 1 )

[node name="Orbit-1" type="Sprite" parent="System"]
position = Vector2( 0, 9 )
texture = ExtResource( 2 )

[node name="Satellite" type="Sprite" parent="System/Orbit-1"]
position = Vector2( 0, -1447.51 )
texture = ExtResource( 6 )

[node name="orbit-timer-1" type="Timer" parent="."]
one_shot = true

[node name="PlanetButton" type="TextureButton" parent="."]
margin_left = 164.0
margin_top = 350.0
margin_right = 250.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Node2D" parent="."]

[node name="InhaleDecrease" type="TextureButton" parent="Options"]
margin_left = 36.0
margin_top = 626.0
margin_right = 76.0
margin_bottom = 666.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/InhaleDecrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InhaleIncrease" type="TextureButton" parent="Options"]
margin_left = 126.0
margin_top = 626.0
margin_right = 166.0
margin_bottom = 666.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/InhaleIncrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "+"
align = 1
valign = 1

[node name="ExhaleIncrease" type="TextureButton" parent="Options"]
margin_left = 334.0
margin_top = 626.0
margin_right = 374.0
margin_bottom = 666.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/ExhaleIncrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "+"
align = 1
valign = 1

[node name="ExhaleDecrease" type="TextureButton" parent="Options"]
margin_left = 250.0
margin_top = 626.0
margin_right = 290.0
margin_bottom = 666.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/ExhaleDecrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "-"
align = 1
valign = 1

[node name="HoldTimeIncrease" type="TextureButton" parent="Options"]
margin_left = 126.0
margin_top = 722.0
margin_right = 166.0
margin_bottom = 762.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/HoldTimeIncrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "+"
align = 1
valign = 1

[node name="HoldTimeDecrease" type="TextureButton" parent="Options"]
margin_left = 36.0
margin_top = 722.0
margin_right = 76.0
margin_bottom = 762.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/HoldTimeDecrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "-"
align = 1
valign = 1

[node name="InhaleLabel" type="Label" parent="Options"]
margin_top = 582.0
margin_right = 202.0
margin_bottom = 630.0
custom_fonts/font = ExtResource( 8 )
text = "Inhale Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExhaleTime" type="Label" parent="Options"]
margin_left = 282.0
margin_top = 628.0
margin_right = 336.0
margin_bottom = 666.0
custom_fonts/font = ExtResource( 8 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldTime" type="Label" parent="Options"]
margin_left = 70.0
margin_top = 724.0
margin_right = 124.0
margin_bottom = 762.0
custom_fonts/font = ExtResource( 8 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InhaleTime" type="Label" parent="Options"]
margin_left = 60.0
margin_top = 624.0
margin_right = 134.0
margin_bottom = 672.0
custom_fonts/font = ExtResource( 8 )
text = "2:40"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExhaleLabel" type="Label" parent="Options"]
margin_left = 210.0
margin_top = 582.0
margin_right = 410.0
margin_bottom = 630.0
custom_fonts/font = ExtResource( 8 )
text = "Exhale Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldLabel" type="Label" parent="Options"]
margin_left = 48.0
margin_top = 680.0
margin_right = 150.0
margin_bottom = 728.0
custom_fonts/font = ExtResource( 8 )
text = "Hold Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestTimeIncrease" type="TextureButton" parent="Options"]
margin_left = 334.0
margin_top = 722.0
margin_right = 374.0
margin_bottom = 762.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/RestTimeIncrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "+"
align = 1
valign = 1

[node name="RestTimeDecrease" type="TextureButton" parent="Options"]
margin_left = 250.0
margin_top = 722.0
margin_right = 290.0
margin_bottom = 762.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/RestTimeDecrease"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "-"
align = 1
valign = 1

[node name="MeditationButton" type="TextureButton" parent="Options"]
margin_top = 792.0
margin_right = 410.0
margin_bottom = 832.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/MeditationButton"]
margin_right = 410.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "Breathing Assistant"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestTime" type="Label" parent="Options"]
margin_left = 284.0
margin_top = 724.0
margin_right = 338.0
margin_bottom = 762.0
custom_fonts/font = ExtResource( 8 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestLabel" type="Label" parent="Options"]
margin_left = 262.0
margin_top = 682.0
margin_right = 364.0
margin_bottom = 730.0
custom_fonts/font = ExtResource( 8 )
text = "Rest Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Options"]
visible = false
margin_left = 8.0
margin_top = 66.0
margin_right = 402.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 1 )
text = "Tap the planet to begin

Each part of the breathing process is adjustable

Tap \"Breathing Assistant\" to switch tools
"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="TextureButton" parent="Options"]
margin_left = 362.0
margin_top = 12.0
margin_right = 402.0
margin_bottom = 52.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options/InfoButton"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 8 )
text = "?"
align = 1
valign = 1

[node name="orbit-1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Instruction" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 518.0
margin_right = 408.0
margin_bottom = 566.0
custom_fonts/font = ExtResource( 8 )
text = "Wait"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="orbit-timer-1" to="." method="_on_orbittimer1_timeout"]
[connection signal="pressed" from="PlanetButton" to="." method="_on_PlanetButton_pressed"]
[connection signal="pressed" from="Options/InhaleDecrease" to="." method="_on_InhaleDecrease_pressed"]
[connection signal="pressed" from="Options/InhaleIncrease" to="." method="_on_InhaleIncrease_pressed"]
[connection signal="pressed" from="Options/ExhaleIncrease" to="." method="_on_ExhaleIncrease_pressed"]
[connection signal="pressed" from="Options/ExhaleDecrease" to="." method="_on_ExhaleDecrease_pressed"]
[connection signal="pressed" from="Options/HoldTimeIncrease" to="." method="_on_HoldTimeIncrease_pressed"]
[connection signal="pressed" from="Options/HoldTimeDecrease" to="." method="_on_HoldTimeDecrease_pressed"]
[connection signal="pressed" from="Options/RestTimeIncrease" to="." method="_on_RestTimeIncrease_pressed"]
[connection signal="pressed" from="Options/RestTimeDecrease" to="." method="_on_RestTimeDecrease_pressed"]
[connection signal="pressed" from="Options/MeditationButton" to="." method="_on_MeditationButton_pressed"]
[connection signal="pressed" from="Options/InfoButton" to="." method="_on_InfoButton_pressed"]
